subscribe blocking for TLS to avoid test crashes due to prolonged run, move kotlin arguments for jvm to build.kt to avoid crashing parent project run on JVM16